Fix footer icon bugs after shifting index.html file

--- a/Index/styles.css
+++ b/Index/styles.css
@@ -1215,12 +1215,13 @@ header ul h2:hover{
     height: 60px;
     width: 60px;
     /* border: solid red; */
-    padding-top: 10px;
+    padding-top: 20px;
 }
 .footer-text{
     color:#fff;
     margin-left: 44%;
     font-size: 12px;
+    padding-top: 5px;
 }
 .github-logo{
     display: flex;
